fix(modal): reduce spacing header

--- a/packages/components/src/components/notice/bal-modal/bal-modal.scss
+++ b/packages/components/src/components/notice/bal-modal/bal-modal.scss
@@ -130,7 +130,7 @@ bal-modal-header + bal-modal-body {
 
     &.has-space-large {
       bal-modal-header {
-        padding: 48px;
+        padding: 48px 48px 32px 48px;
 
         bal-close {
           right: 48px;
